third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/copy_combo_invalid.exp

Diagnostics:
error: cannot copy local `s` which is still mutably borrowed
   ┌─ tests/reference-safety/v1-tests/copy_combo_invalid.move:14:9
   │
13 │         if (cond) f = &mut s.f else f = &mut other.f;
   │                       -------- field `f` via local `s` previously mutably borrowed here
14 │         copy s;
   │         ^^^^^^ copy attempted here
15 │         *f;
   │         -- conflicting reference `f` used here

error: cannot copy local `s` which is still mutably borrowed
   ┌─ tests/reference-safety/v1-tests/copy_combo_invalid.move:23:9
   │
22 │         if (cond) f = &mut s else f = other;
   │                       ------ local `s` previously mutably borrowed here
23 │         copy s;
   │         ^^^^^^ copy attempted here
24 │         *f;
   │         -- conflicting reference `f` used here

error: cannot copy local `s` which is still mutably borrowed
   ┌─ tests/reference-safety/v1-tests/copy_combo_invalid.move:32:9
   │
31 │         if (cond) f = id_mut(&mut s) else f = other;
   │                       -------------- local `s` previously mutably borrowed here
32 │         copy s;
   │         ^^^^^^ copy attempted here
33 │         *f;
   │         -- conflicting reference `f` used here

error: cannot copy local `s` which is still mutably borrowed
   ┌─ tests/reference-safety/v1-tests/copy_combo_invalid.move:40:21
   │
39 │         let f = &mut s.f;
   │                 -------- field `f` via local `s` previously mutably borrowed here
40 │         if (cond) { copy s; };
   │                     ^^^^^^ copy attempted here
41 │         *f;
   │         -- conflicting reference `f` used here
